# b

./: README.md
aoc2021/day2/: Makefile
aoc2021/day3/: Cargo.toml  Makefile
aoc2021/day3/src/: test_input.txt
celeng/snail_sort/: Cargo.toml
celeng/snail_sort/src/: main.rs
celeng/transpose/: main.rs
celeng/vec_skip_even_index_then_sum/: Cargo.toml
celeng/vec_skip_even_index_then_sum/src/: main.rs
day1/: Makefile  main  main.rs
day2/: Makefile  main  main.rs
day3/src/: main.rs
emale/: .gitignore  Cargo.toml  configuration.yaml.example  docker_postgres.sh  dockerfile
emale/configuration/: base.yaml.example  local.yaml  production.yaml
emale/migrations/: 20220814112535_create_subscriptions_table.sql  20220913114830_add_status_to_subscriber.sql  20220913120341_make_status_not_null_in_subscriber.sql  20220913120612_create_subscribe_token_table.sql  20221016061547_user_seed.sql  20221016064101_seed_user_two.sql  20221027025135_create_newsletter_issues_table.sql  20221027031058_create_issue_delivery_queues_table.sql
emale/src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
emale/src/authentication/: middleware.rs  mod.rs  password.rs
emale/src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
emale/src/idempotency/: key.rs  mod.rs  persistence.rs
emale/src/routes/: health_check.rs  mod.rs  newsletter.rs  subscribe_confirm.rs  subscription.rs
emale/src/routes/admin/: dashboard.rs  logout.rs  mod.rs
emale/src/routes/admin/newsletter/: get.rs  post.rs
emale/src/routes/admin/password/: get.rs  post.rs
emale/src/routes/home/: home.html  mod.rs
emale/src/routes/login/: get.rs  login.html  mod.rs  post.rs
emale/tests/: health_check.rs
emale/tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscribe.rs  subscribe_confirm.rs  subscriptions.rs
eurel/factoril_digit_sum/: Cargo.toml
eurel/factoril_digit_sum/src/: main.rs
eurel/largest_prime_factor/src/: main.rs
eurel/max_3digit_palindrome/: Cargo.toml
eurel/max_3digit_palindrome/src/: main.rs
eurel/smallest_multiple/src/: main.rs
eurel/sum_even_fibbonaci/: Cargo.toml
eurel/sum_even_fibbonaci/src/: main.rs
imexweexend/: Cargo.toml  README.md
imexweexend/src/: main.rs
imexweexend/src/util/: helper.rs
misc/go/foobar/: README.md  fizbuz  go.mod  main.go
misc/go/weather_api/: README.md  go.mod  main.go
misc/js/: README.md  twoSums.js
omdb/: .gitignore  Cargo.toml
omdb/configuration/: base.yaml.example  local.yaml.example
omdb/migrations/: 20221028100650_create_users_table.sql  20221028100700_create_favorite_movies_table.sql  20221119102412_add_user_token_in_users_table.sql  20221124091352_add_poster_and_imdb_id_in_favorite_movies_table.sql
omdb/src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs  utils.rs
omdb/src/authentication/: util.rs
omdb/src/domain/: favorite_movie.rs  mod.rs  user.rs
omdb/src/errors/: app_error.rs  mod.rs  sqlx_error.rs
omdb/src/middleware/: authentication.rs
omdb/src/routes/: mod.rs
omdb/src/routes/auth/: login.rs  mod.rs  register.rs
omdb/src/routes/movies/: get.rs  post.rs
omdb/src/routes/users/: get.rs  post.rs
omdb/tests/api/: auth.rs  health_check.rs  helper.rs  main.rs  movie.rs
scuffed-todo-tauri/: package.json  todo
scuffed-todo-tauri/src/: style.css  types.ts
scuffed-todo-tauri/src-tauri/: Cargo.toml  tauri.conf.json
scuffed-todo-tauri/src-tauri/src/: main.rs
scuffed-todo-tauri/src/pages/: index.tsx
