[package]
name = "emale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs" 

[[bin]]
path="src/main.rs"
name="emale"

[dependencies]
config="0.11"
actix-web="4"
actix-http="3"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
log = "0.4.17"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
tracing-actix-web= "0.5"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.9.0"
validator = "0.16.0"

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = { version = "0.11.10", features = ["json"] }
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]