[package]
name = "emale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs" 

[[bin]]
path="src/main.rs"
name="emale"

[dependencies]
argon2 = { version= "0.3", features = ["std"]}
config="0.11"
thiserror = "1"
actix-web="4"
actix-http="3"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
actix-web-lab = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.15"
log = "0.4.17"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
urlencoding = "2.1.2"
once_cell = "1"
tracing-actix-web= "0.5"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.9.0"
validator = "0.16.0"  
anyhow = "1.0.65"
base64 = "0.13"
rand = { version = "0.8", features=["std_rng"] }
cargo-watch = "8.1.2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
actix-rt = "2.7.0"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
linkify = "0.8"
serde_urlencoded = "0.7.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
  "json", 
  "rustls-tls", 
  "cookies"
]