[package]
name = "omdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="omdb"

[dependencies]
anyhow = "1.0.66"
actix-web = "4.2.1"
actix-http = "3.2.2"
actix-redis = "0.12.0"
actix-web-httpauth = "0.8.0"
actix-web-lab = "0.15"
config = "0.11"
once_cell = "1.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.0.0"
serde_json = "1"
secrecy = "0.8.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web= "0.5"
validator = "0.16.0"

[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]