[package]
name = "omdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="omdb"

[dependencies]
anyhow = "1.0.66"
actix-web = "4.2.1"
actix-http = "3.2.2"
actix-web-httpauth = "0.8.0"
actix-web-lab = "0.15"
argon2 = { version = "0.4.1", features = ["std"]}
config = "0.11"
derive_more = "0.99.17"
once_cell = "1.15.0"
rand = { version = "0.8.5", features=["std_rng"] }
redis = { version = "0.22.1", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
sha3 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.0.0"
serde_json = "1"
secrecy = { version = "0.8", features = ["serde"] }
thiserror = "1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web= "0.5"
validator = "0.16.0"

[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]